[package]
name = "ssh-keyctl"
version = "0.1.0"
authors = ["Edward Shen <code@eddie.sh>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { git = "https://github.com/clap-rs/clap/" }
osshkeys = "0.3"
dirs = "2"